android/app/.cxx/Debug/606p3xn3/arm64-v8a/android_gradle_build_stdout_native_opencv_arm64-v8a.txt
ninja: Entering directory `E:\hoc tap\20213\project_native\android\app\.cxx\Debug\606p3xn3\arm64-v8a'
[1/2] Building CXX object CMakeFiles/native_opencv.dir/src/main/cpp/native_add.cpp.o
FAILED: CMakeFiles/native_opencv.dir/src/main/cpp/native_add.cpp.o 
C:\Users\ASUS\AppData\Local\Android\Sdk\ndk\21.1.6352462\toolchains\llvm\prebuilt\windows-x86_64\bin\clang++.exe --target=aarch64-none-linux-android24 --gcc-toolchain=C:/Users/ASUS/AppData/Local/Android/Sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/windows-x86_64 --sysroot=C:/Users/ASUS/AppData/Local/Android/Sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/windows-x86_64/sysroot -Dnative_opencv_EXPORTS -isystem "E:/hoc tap/20213/tools/OpenCV-android-sdk/sdk/native/jni/include" -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security   -O0 -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/native_opencv.dir/src/main/cpp/native_add.cpp.o -MF CMakeFiles\native_opencv.dir\src\main\cpp\native_add.cpp.o.d -o CMakeFiles/native_opencv.dir/src/main/cpp/native_add.cpp.o -c ../../../../src/main/cpp/native_add.cpp
../../../../src/main/cpp/native_add.cpp:12:62: error: expected ')'
   if(!facedetect.load("haarcascade_frontalface_default.xml"){
                                                             ^
../../../../src/main/cpp/native_add.cpp:12:6: note: to match this '('
   if(!facedetect.load("haarcascade_frontalface_default.xml"){
     ^
../../../../src/main/cpp/native_add.cpp:24:13: error: use of undeclared identifier 'img'
     return img.rows + img.cols;
            ^
../../../../src/main/cpp/native_add.cpp:24:24: error: use of undeclared identifier 'img'
     return img.rows + img.cols;
                       ^
3 errors generated.
ninja: build stopped: subcommand failed.
